# Monogatari

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LLMAssistant.sln  README.md  SECURITY.md  readme_ch.md  readme_de.md  readme_en.md  readme_es.md  readme_fr.md  readme_ja.md  readme_ko.md  readme_ru.md
rust-engine/: Cargo.toml  README.md  rust-toolchain.toml
rust-engine/crates/ai/: Cargo.toml
rust-engine/crates/ai/src/: api_engine.rs  backend_selection.rs  inference.rs  lib.rs  onnx_engine.rs  pipeline.rs  prompt_builder.rs
rust-engine/crates/ai/tests/: inference_tests.rs  pipeline_tests.rs  prompt_tests.rs
rust-engine/crates/assets/: Cargo.toml
rust-engine/crates/assets/src/: asset_manager.rs  lib.rs  save_manager.rs
rust-engine/crates/authoring/: Cargo.toml
rust-engine/crates/authoring/src/: agent_transaction.rs  campaign_preview.rs  campaign_validation.rs  conversation_quality.rs  delivery_validation.rs  dialogue_validation.rs  filesystem.rs  json_catalog.rs  knowledge_documents.rs  knowledge_validation.rs  lib.rs  paths.rs  project.rs  project_package.rs  prompt_guard.rs  quality_suite_execution.rs  quality_suite_validation.rs  runtime_validation.rs  scene_roleplay_preview.rs  scene_roleplay_validation.rs  story_content_validation.rs  story_events.rs  workflow_documents.rs  workflow_execution_policy.rs  workflow_preview.rs  workflow_validation.rs
rust-engine/crates/authoring/src/agent_transaction/: plan.rs  protocol.rs  tests.rs
rust-engine/crates/authoring/src/campaign_preview/: tests.rs
rust-engine/crates/authoring/src/campaign_validation/: tests.rs
rust-engine/crates/authoring/src/delivery_validation/: tests.rs
rust-engine/crates/authoring/src/dialogue_validation/: tests.rs
rust-engine/crates/authoring/src/json_catalog/: inspect.rs  protocol.rs  read.rs  tests.rs
rust-engine/crates/authoring/src/knowledge_documents/: tests.rs
rust-engine/crates/authoring/src/knowledge_validation/: tests.rs
rust-engine/crates/authoring/src/project_package/: archive_reader.rs  archive_writer.rs  export.rs  manifest.rs  portable_path.rs
rust-engine/crates/authoring/src/quality_suite_execution/: tests.rs
rust-engine/crates/authoring/src/quality_suite_validation/: tests.rs
rust-engine/crates/authoring/src/runtime_validation/: tests.rs
rust-engine/crates/authoring/src/scene_roleplay_preview/: tests.rs
rust-engine/crates/authoring/src/scene_roleplay_validation/: tests.rs
rust-engine/crates/authoring/src/story_content_validation/: tests.rs
rust-engine/crates/authoring/src/workflow_documents/: tests.rs
rust-engine/crates/authoring/src/workflow_execution_policy/: tests.rs
rust-engine/crates/authoring/src/workflow_preview/: tests.rs
rust-engine/crates/authoring/src/workflow_validation/: tests.rs
rust-engine/crates/core/: Cargo.toml
rust-engine/crates/core/src/: error.rs  event_bus.rs  events.rs  game_clock.rs  lib.rs  service_locator.rs  state_key.rs  traits.rs
rust-engine/crates/game/: Cargo.toml
rust-engine/crates/game/src/: campaign.rs  lib.rs
rust-engine/crates/game/src/campaign/: tests.rs
rust-engine/crates/game/src/characters/: character.rs  memory.rs  mod.rs  personality.rs
rust-engine/crates/game/src/dialogue/: dialogue_manager.rs  dialogue_node.rs  dialogue_script.rs  mod.rs
rust-engine/crates/game/src/knowledge/: context_builder.rs  knowledge_base.rs  knowledge_entry.rs  mod.rs
rust-engine/crates/game/src/scene_roleplay/: mod.rs  security.rs  tests.rs
rust-engine/crates/game/tests/: boundary_tests.rs  integration_tests.rs  knowledge_tests.rs  script_tests.rs
rust-engine/crates/mcp-server/: Cargo.toml
rust-engine/crates/mcp-server/src/: cli.rs  lib.rs  main.rs  package_transport.rs  project_lease.rs  protocol.rs  provenance.rs  server.rs  validation.rs
rust-engine/crates/mcp-server/tests/: stdio_e2e.rs
rust-engine/crates/scripting/: Cargo.toml
rust-engine/crates/scripting/src/: lib.rs
rust-engine/crates/tauri-app/: Cargo.toml  build.rs  tauri.conf.json
rust-engine/crates/tauri-app/capabilities/: default.json
rust-engine/crates/tauri-app/src/: content_authoring.rs  content_references.rs  installation_verifier.rs  main.rs  state.rs  story_access.rs  story_events.rs  story_progress.rs
rust-engine/data/: settings.json
rust-engine/data/assets/models/: blue_frame.PROVENANCE.md  blue_frame_classroom.glb  blue_frame_earth.glb  fox.LICENSE.txt
rust-engine/data/campaigns/: blue_frame_campaign.json
rust-engine/data/characters/: aoi.json  echo_nine.json  example_character.json  kenji.json  luna.json  mei.json  mio.json  nori.json  ren.json  sakura.json  sora.json  takeshi.json  taro.json  yuki.json
rust-engine/data/dialogue/: aoi_clinic_visit.json  example_dialogue.json  festival_preparations.json  hiro_workshop.json  post_office_tales.json  ren_investigation.json  tideglass_signal.json  tideglass_silence_epilogue.json  tideglass_truth_epilogue.json
rust-engine/data/endings/: tideglass_silence_ending.json  tideglass_truth_ending.json
rust-engine/data/events/: story_events.json
rust-engine/data/knowledge/: blue_frame_archive.json  blue_frame_classroom_record.json  constellation_map.json  example_world.json  forest_of_springtown.json  hiro_workshop_lore.json  noodle_and_soul.json  sakura_nature.json  seasons_of_springtown.json  springtown_cuisine.json  springtown_melody.json  springtown_photographs.json  starlight_festival.json  tideglass_echo_protocol.json  yuki_library_lore.json
rust-engine/data/locales/: en.json  ja-JP.json  ja.json  ko-KR.json  ko.json  zh-CN.json  zh.json
rust-engine/data/quality_suites/: blue_frame_roleplay.json  blue_frame_roleplay_security.json  character_stability.json
rust-engine/data/roleplays/: blue_frame_roleplay.json
rust-engine/data/scenes/: blue_frame_classroom.json  blue_frame_orbit.json  crossroads.json  studio_night.json  tideglass_causeway.json  tideglass_lantern_chamber.json
rust-engine/data/workflows/: dramatic_encounter.json  dynamic_demo.json  example_workflow.json  score_gate_demo.json  tideglass_route.json
(+505 files in other folders)
