[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ai",
    "crates/game",
    "crates/assets",
    "crates/scripting",
    "crates/tauri-app",
]

[workspace.package]
version = "0.9.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/SakalioLabs/Monogatari"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for API inference
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"

# ONNX Runtime
ort = { version = "2", features = ["directml"] }
ndarray = "0.16"

# Scripting
rhai = { version = "1", features = ["sync", "serde"] }

# UUID for unique IDs
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Utility dependencies used by the desktop command layer
once_cell = "1"
hostname = "0.4"
md5 = "0.7"
sha2 = "0.10"

# Internal crates
llm-core = { path = "crates/core" }
llm-ai = { path = "crates/ai" }
llm-game = { path = "crates/game" }
llm-assets = { path = "crates/assets" }
llm-scripting = { path = "crates/scripting" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
[patch.crates-io]
