[package]
name = "llm-ai"
version.workspace = true
edition.workspace = true

[dependencies]
llm-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
futures = { workspace = true }
