[package]
name = "llm-assets"
version.workspace = true
edition.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-game = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
