[package]
name = "llm-authoring"
version.workspace = true
edition.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
md5 = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
llm-game = { workspace = true }
llm-core = { workspace = true }
llm-scripting = { workspace = true }
rhai = { workspace = true }
