[package]
name = "llm-game"
version.workspace = true
edition.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-ai = { workspace = true }
llm-scripting = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
