[package]
name = "monogatari-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "monogatari_mcp"
path = "src/lib.rs"

[[bin]]
name = "monogatari-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
llm-authoring = { workspace = true }
rmcp = { version = "2.2.0", default-features = false, features = ["server", "macros", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rmcp = { version = "2.2.0", default-features = false, features = ["server", "macros", "transport-io", "client", "transport-child-process"] }
